# studio

./: .gitignore  Dockerfile  Dockerfile.full  LEGAL.md  LICENSE  README.md  docker-compose.yml  versions.json
api/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 08a70879788f_baseline.py
api/app/: __init__.py
api/app/application/: __init__.py
api/app/application/data/: image_presets.json
api/app/application/defaults/: __init__.py  forms.py  notifications.py
api/app/application/dtos/: __init__.py  blueprint_dto.py  command_dto.py  instance_dto.py  notification_dto.py  org_file_dto.py  organization_dto.py  prompt_dto.py  provider_dto.py  query_dto.py  queue_dto.py  webhook_dto.py  workflow_dto.py
api/app/application/event_handlers/: __init__.py  organization_handler.py
api/app/application/interfaces/: __init__.py  event_bus.py  exceptions.py  message_queue.py  password_service.py  provider_adapter.py  service_interfaces.py
api/app/application/services/: __init__.py  audit_service.py  blueprint_service.py  dead_letter_replay_service.py  image_presets.py  instance_notifier.py  instance_service.py  mapping_resolver.py  notification_service.py  package_management_service.py  prompt_service.py  provider_service.py  public_content_service.py  queue_service.py  site_content_service.py  stale_step_sweep_service.py  system_health_service.py  versioned_installer.py  webhook_service.py  worker_cleanup_service.py  workflow_credential_service.py  workflow_service.py
api/app/config/: __init__.py  catalog.py  constants.py  docs_sync.py  settings.py  sources.py
api/app/domain/: __init__.py
api/app/domain/audit/: __init__.py  models.py  repository.py
api/app/domain/blueprint/: __init__.py  models.py  repository.py
api/app/domain/common/: __init__.py  base_entity.py  converters.py  events.py  exceptions.py  interfaces.py  json_serialization.py  value_objects.py
api/app/domain/instance/: __init__.py  events.py  iteration_execution.py  iteration_execution_repository.py  models.py  repository.py
api/app/domain/instance_step/: __init__.py  models.py  step_execution.py  step_execution_repository.py
api/app/domain/marketplace/: __init__.py  models.py  repository.py
api/app/domain/notification/: __init__.py  models.py  repository.py
api/app/domain/org_file/: __init__.py  models.py  repository.py
api/app/domain/organization/: __init__.py  factories.py  models.py  repository.py
api/app/domain/organization_secret/: __init__.py  models.py  repository.py
api/app/domain/prompt/: __init__.py  models.py  repository.py
api/app/domain/provider/: __init__.py  events.py  models.py  repository.py
api/app/domain/queue/: __init__.py  interfaces.py  models.py  repository.py
api/app/domain/site_content/: __init__.py  models.py  repository.py
api/app/domain/workflow/: __init__.py  events.py  models.py  output_forwarding.py  repository.py  workflow_navigator.py
api/app/infrastructure/: __init__.py  comfyui_workflow_installer.py  errors.py  provider_installer.py
api/app/infrastructure/adapters/: __init__.py  base_adapter.py  generic_http_adapter.py  provider_loader.py  registry.py  webhook_adapter.py
api/app/infrastructure/auth/: __init__.py  jwt.py  password.py  password_service.py  websocket_auth.py  worker_jwt.py
api/app/infrastructure/logging/: __init__.py  access_log_filter.py  config.py  context_middleware.py  filters.py  formatters.py  obfuscation.py  request_context.py
api/app/infrastructure/maintenance/: __init__.py  seed.py  state.py
api/app/infrastructure/messaging/: __init__.py  event_bus.py  factory.py  job_status_publisher.py  pg_broadcaster.py  pg_notify.py  queue_router.py
api/app/infrastructure/orchestration/: __init__.py  action_executor.py  result_processor.py
api/app/infrastructure/persistence/: __init__.py  database.py  models.py  rls_context.py
api/app/infrastructure/repositories/: __init__.py  audit_repository.py  blueprint_repository.py  instance_repository.py  iteration_execution_repository.py  marketplace_catalog_repository.py  notification_repository.py  org_file_repository.py  organization_repository.py  organization_secret_repository.py  prompt_repository.py  provider_repository.py  (+6 more)
api/app/presentation/: __init__.py
api/app/static/: README.md  swagger-ui-dark.html
api/config/providers/: httpbin_example.json
api/docker/: app.conf  cloudflared-start.sh  cloudflared.conf  entrypoint.sh  postgres.conf  supervisord.conf  ui-start.sh  ui.conf  worker-general.conf  worker-transfer.conf
api/docker/postgres/: init.sql
api/envs/: .env.prod
api/scripts/: bootstrap.py  bootstrap_database.py  create_tables.py  docker-entrypoint.sh  init-databases.sh  reset_admin_password.py
api/scripts/migrations/: add_rls_enforcement.sql  add_rls_policies.sql
workers/: .dockerignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
workers/engines/: __init__.py
workers/engines/audio/: Dockerfile  __init__.py  handler.py  requirements.txt  settings.py
workers/engines/comfyui/: Dockerfile  __init__.py  client.py  handler.py  requirements.txt  server.py  settings.py  templates.py
workers/engines/comfyui_remote/: Dockerfile  __init__.py  comfyui_init.py  handler.py  requirements.txt
workers/engines/general/: Dockerfile  __init__.py  executor.py  handler.py
workers/engines/transfer/: Dockerfile  __init__.py  handler.py  requirements.txt
workers/engines/video/: Dockerfile  __init__.py  common.py  create_video.py  handler.py  merge_video_audio.py  normalize.py  requirements.txt  settings.py  subtitle_utils.py  utils.py
workers/envs/: .env.prod
workers/scripts/: register_worker.py
workers/shared/: __init__.py  constants.py  env_files.py  requirements.txt  settings.py  worker.py  worker_types.py
workers/shared/adapters/: __init__.py
workers/shared/utils/: __init__.py  credential_client.py  dead_letter.py  file_upload_client.py  http_job_client.py  logging_config.py  redaction.py  result_publisher.py  security.py  storage.py  worker_base.py
(+553 files in other folders)
