[build-system]
requires = ["setuptools>=75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
package-data = {"app" = ["**/*.py"]}

[project]
name = "studio-framework"
version = "1.0.0"
description = "Production-ready workflow orchestration SaaS framework built with Domain-Driven Design"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Studio Framework Contributors", email = "hello@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Runtime dependencies ONLY - what's needed to run the application in production
dependencies = [
    "fastapi>=0.124.0",  # Upgraded to support starlette>=0.49.1
    "starlette>=0.49.1",  # CVE-2025-62727: DoS via Range header merging
    "uvicorn>=0.37.0",
    "sqlalchemy==2.0.43",
    "alembic>=1.13.0",
    "asyncpg==0.30.0",
    "pydantic==2.11.9",
    "pydantic-settings==2.11.0",  # Settings management (was missing!)
    "PyJWT==2.12.0",  # Replaces python-jose (CVE in ecdsa dependency); CVE-2026-32597
    "passlib==1.7.4",
    "python-multipart==0.0.27",  # CVE-2026-42561: DoS via unbounded multipart part headers
    "bcrypt==4.0.1",  # 4.x is compatible with passlib 1.7.4
    "email-validator==2.3.0",
    "httpx==0.28.1",  # Used in application code
    "cryptography>=46.0.5",  # CVE-2026-26007: subgroup validation for SECT curves
    "websockets==15.0.1",
    "python-dotenv==1.2.2",
    "pillow>=12.1.1",  # CVE-2026-25990: OOB write via crafted PSD image
    "jsonpath-ng==1.6.1",  # JSONPath extraction for workflow field mapping
    "jsonschema==4.25.1",  # ST092: install-time validation for catalog content
    "Jinja2>=3.1.0",  # Template rendering for workflows
    "rich>=14.0.0",  # Beautiful terminal output (colored logs)
    "stripe>=7.0.0",  # Stripe payment processing
    "pycares>=4.9.0,<5",  # GHSA-5qpg-rh4j-qp35: Use-After-Free fix in 4.9.0
    "aiodns>=3.6.0",
    # Auto-detected by uvicorn when DEBUG=True; switches the reload watcher
    # from stat polling to inotify (RustNotify), eliminating idle CPU. Lives
    # in runtime deps because Dockerfile builds with `uv sync --no-dev`.
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
# Test dependencies - for running tests
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.10.7",
    "pytest-xdist>=3.8.0",
    "greenlet==3.2.4",  # Required for SQLAlchemy async operations
]

# Development dependencies - for development work (includes test deps)
dev = [
    "studio-framework[test]",  # Includes all test dependencies
    "pyright==1.1.408",
    "rich==14.1.0",
    "black==26.3.1",  # CVE-2026-32274
    "isort==5.13.2",
    "flake8==7.1.1",
]

[dependency-groups]
dev = [
    "greenlet>=3.2.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "coverage>=7.10.7",
    "flake8>=7.1.1",
    "black>=26.3.1",
    "isort>=5.13.2",
    "pyright>=1.1.405",
    "respx>=0.22.0",
    "time-machine>=3.2.0",
    "vulture>=2.16",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "jwt.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = ["--strict-markers"]
# Make `contracts/` (shared with workers) importable during tests without a
# symlink or editable install. Runtime deployments rely on the Dockerfile's
# `COPY --from=contracts . /app/contracts/` to put it on sys.path.
pythonpath = [".."]
markers = [
    "security: Auth, RLS, org isolation, credential encryption tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*:",
    "ignore:The garbage collector is trying to clean up non-checked-in connection:sqlalchemy.exc.SAWarning",
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
    "ignore:Exception ignored in.*Connection._cancel:pytest.PytestUnraisableExceptionWarning",
    "ignore:Module app\\..* was previously imported, but not measured:coverage.exceptions.CoverageWarning",
]

[tool.coverage.run]
branch = true
concurrency = ["greenlet", "thread"]
disable_warnings = ["module-not-measured", "module-not-imported"]
omit = [
    # Blueprint routes disabled - feature is being redesigned (coming soon)
    "app/presentation/api/blueprints.py",
    "app/presentation/api/blueprints_marketplace.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "@abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "alembic"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
strictListInference = true

[tool.uv]
override-dependencies = [
    "cryptography>=46.0.5",  # CVE-2026-26007
]
