[project]
name = "studio-worker"
version = "1.0.0"
description = "Studio workflow job workers"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psutil>=5.9.0",
    "jsonpath-ng>=1.6.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
    "mutagen>=1.47.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpx>=0.30.0",
    "pytest-xdist>=3.0.0",
    "respx>=0.21.0",
    "freezegun>=1.2.0",
    "pyright>=1.1.405",
    "flake8>=7.1.1",
    "python-dotenv>=1.2.2",  # test-time only: conftest.py pre-loads envs/.env.test before shared.settings imports
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may need mocked services)",
    "slow: Tests that take significant time",
]

[tool.coverage.run]
source = ["shared", "engines"]
branch = true
omit = [
    "*/tests/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true

[tool.setuptools.packages.find]
include = ["shared*", "engines*"]
exclude = ["tests*", "docker*", "typestubs*"]
